<resources>
    <string name="app_name">Racing App</string>
    <string name="btn_sign_in">Вход</string>
    <string name="btn_registration">Регистрация</string>
    <string name="btn_skip">Пропустить</string>
    <string name="hint_login">Логин</string>
    <string name="hint_password">Пароль</string>
    <string name="logo">logo</string>
    <string name="hint_mail">E-mail</string>
    <string name="hint_confirm_password">Подтверждение</string>
    <string name="btn_sign_up">Зарегистрироваться</string>
    <string name="btn_back">Назад</string>
    <string name="dialog_select_role_title">Выбор роли пользователя</string>
    <string name="dialog_negative_btn">Отмена</string>
    <string name="dialog_positive_btn">OK</string>
    <string name="menu_logout">Выход</string>
    <string name="menu_profile">Профиль</string>
    <string name="menu_tournaments">Чемпионаты</string>
    <string name="menu_teams">Команды</string>
    <string name="menu_requests">Заявки</string>
    <string name="menu_track">Трассы</string>

    <string name="championship_state_begin">Начат</string>
    <string name="championship_state_ended">Завершен</string>
    <string name="btn_races">Гонки</string>
    <string name="btn_teams">Команды</string>
    <string name="btn_team_results">Результаты команд</string>
    <string name="btn_racer_results">Результаты гонщиков</string>
    <string name="title_hint">Название</string>
    <string name="btn_save">Сохранить</string>
    <string name="laps_hint">Кол-во кругов</string>
    <string name="length_hint">Протяженность</string>
    <string name="country_hint">Страна</string>
    <string name="btn_new_racer">Новый гонщик</string>
    <string name="manager_text">Менеджер</string>
    <string name="racer_text">Гонщик</string>
    <string name="second_racer_text">Второй гонщик</string>
    <string name="first_racer_text">Первый гонщик</string>
    <string name="btn_new_manager">Новый менеджер</string>
    <string name="hint_name">Имя</string>
    <string name="hint_surname">Фамилия</string>
    <string name="hint_birthday">Дата рождения</string>
    <string name="text_racers">Гонщики</string>
    <string name="request_status_filed">Подана</string>
    <string name="request_status_approved">Одобрена</string>
    <string name="request_status_rejected">Отклонена</string>
    <string name="btn_approve">Одобрить</string>
    <string name="btn_cancel">Отклонить</string>
    <string name="tournament_text">Чемпионат</string>
    <string name="text_racer">Гонщик</string>
    <string name="hint_place">Место</string>
    <string name="hint_points">Очки</string>
    <string name="cnt_race_text">Количество гонок</string>
    <string name="cnt_win_text">Количество побед</string>
</resources>
