<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/actionRequests"
        android:icon="@drawable/ic_request"
        android:title="@string/menu_requests"
        app:showAsAction="always" />

    <item
        android:id="@+id/actionTeams"
        android:icon="@drawable/ic_team"
        android:title="@string/menu_teams"
        app:showAsAction="always" />

    <item android:id="@+id/actionTracks"
        android:icon="@drawable/ic_track"
        android:title="@string/menu_track"
        app:showAsAction="always"/>

    <item
        android:id="@+id/actionProfile"
        android:icon="@drawable/ic_profile"
        android:title="@string/menu_profile"
        app:showAsAction="always" />

    <item
        android:id="@+id/actionLogout"
        android:icon="@drawable/ic_logout"
        android:title="@string/menu_logout"
        app:showAsAction="always" />
</menu>